feat: enhance accessibility features, update email service integration, and improve UI components

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,4 @@
 NEXT_PUBLIC_EMAILJS_SERVICE_ID=xxxxxxxxxx
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=xxxxxxxxxxxxxxx
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=xxxxxxxxxxxxxxxxxxxx
+EMAILJS_PRIVATE_KEY=xxxxxxxxxxxxxxxxxxxx
