--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "tsx scripts/seed-database.ts",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@emailjs/nodejs": "^5.0.2",
+    "@prisma/client": "^7.2.0",
+    "@prisma/extension-accelerate": "^3.0.1",
+    "dotenv": "^17.2.3",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -23,7 +30,9 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
+    "prisma": "^7.2.0",
     "tailwindcss": "^3.4.19",
+    "tsx": "^4.21.0",
     "typescript": "^5.0.0"
   }
 }
