--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emailjs/nodejs": "^5.0.2",
     "date-fns": "^3.0.0",
     "next": "^14.2.0",
+    "prismjs": "^1.30.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-icons": "^5.5.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.23",
