feat: update TypeScript configuration and add JSON5 support
- Set "noImplicitAny" to false in tsconfig.json for relaxed type checking.
- Create json5.d.ts declaration file for importing JSON5 modules.
- Add portfolio-data.json.bak with comprehensive portfolio information including metadata, skills, experience, projects, awards, education, languages, and contact details.
- Introduce portfolio-data.json5 with similar structure using JSON5 format for improved readability and flexibility.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emailjs/browser": "^4.4.1",
     "@emailjs/nodejs": "^5.0.2",
     "date-fns": "^3.0.0",
+    "json5": "^2.2.3",
     "next": "^14.2.0",
     "prismjs": "^1.30.0",
     "react": "^18.3.0",
