added company logo

--- a/portfolio-data.json5
+++ b/portfolio-data.json5
@@ -4,7 +4,16 @@
     title: "MD. Huzaifa - Software Engineer Portfolio",
     description: "Full-stack Software Engineer specializing in NestJS, React, Microservices, and Modern Web Technologies. Award-winning developer at Sheba Platform Limited.",
     author: "MD. Huzaifa",
-    keywords: ["Software Engineer", "Full Stack Developer", "NestJS", "React", "Microservices", "Docker", "Next.js", "TypeScript"],
+    keywords: [
+      "Software Engineer",
+      "Full Stack Developer",
+      "NestJS",
+      "React",
+      "Microservices",
+      "Docker",
+      "Next.js",
+      "TypeScript",
+    ],
     siteUrl: "https://mdhuzaifa.dev",
   },
   hero: {
@@ -89,7 +98,7 @@
           { name: "MySQL", icon: "mysql" },
           { name: "PostgreSQL", icon: "postgres" },
           { name: "MongoDB", icon: "mongodb" },
-          { name: "MSSQL" },
+          { name: "MSSQL", icon: "mysql" },
           { name: "Oracle" },
           { name: "SQLite", icon: "sqlite" },
         ],
@@ -147,6 +156,7 @@
         ],
         featured: true,
         visible: true,
+        icon: "/company-logo/sheba.webp",
       },
       {
         company: "Workspace InfoTech Limited",
@@ -160,8 +170,9 @@
           "Deployed and maintained the project on Supabase, ensuring reliability and scalability",
           "Addressed post-delivery issues and implemented client-requested changes leading to successful project completion",
         ],
-        featured: false,
+        featured: true,
         visible: true,
+        icon: "/company-logo/workspace.webp",
       },
       {
         company: "Arena Web Security",
@@ -178,6 +189,7 @@
         featured: false,
         visible: false,
         showInSeeMore: true,
+        icon: "/company-logo/aws.webp",
       },
     ],
   },
@@ -195,7 +207,14 @@
             description: "Comprehensive event and meeting management platform with Google Calendar integration and secure meeting hosting.",
             problem: "Difficulty in managing multiple event types and hosting secure meetings with controlled attendee access",
             solution: "Built a feature-rich platform with Google Calendar API integration, Stripe payments, and admin panel for seamless event management",
-            techStack: ["React", "Express", "MongoDB", "Stripe", "Google Calendar", "Firebase"],
+            techStack: [
+              "React",
+              "Express",
+              "MongoDB",
+              "Stripe",
+              "Google Calendar",
+              "Firebase",
+            ],
             features: [
               "Create and manage multiple types of events",
               "Host meetings with only allowed attendees",
@@ -246,7 +265,14 @@
             description: "RESTful API for educational platform with complete CRUD operations, email functionality, and comprehensive API documentation.",
             problem: "Need for a robust, well-documented backend API for educational applications",
             solution: "Developed a fully documented API with Swagger UI, email integration via Resend, and validation using Zod",
-            techStack: ["Express", "PostgreSQL", "JWT", "Zod", "Swagger", "Resend"],
+            techStack: [
+              "Express",
+              "PostgreSQL",
+              "JWT",
+              "Zod",
+              "Swagger",
+              "Resend",
+            ],
             features: [
               "Complete CRUD operations for all entities",
               "Email notifications using Resend",
@@ -268,7 +294,13 @@
             description: "A simulated cryptocurrency wallet interface for learning and demonstration purposes.",
             problem: "Need for a safe environment to understand cryptocurrency wallet interfaces without real assets",
             solution: "Built a demo wallet application that simulates real wallet functionality for educational purposes",
-            techStack: ["NextJS", "antd", "Redux Toolkit","API Routes","MongoDB"],
+            techStack: [
+              "NextJS",
+              "antd",
+              "Redux Toolkit",
+              "API Routes",
+              "MongoDB",
+            ],
             features: [
               "Simulated wallet interface",
               "Transaction history tracking",
@@ -313,7 +345,15 @@
             description: "Modern admin portal for managing staff members and their booking schedules with calendar views and conflict detection.",
             problem: "Staff scheduling systems need efficient booking management, conflict prevention, and recurring schedule support",
             solution: "Built a comprehensive admin portal with calendar views, RRule generator for recurring bookings, and automatic conflict detection",
-            techStack: ["Next.js", "TypeScript", "Prisma", "SQLite", "ShadCN UI", "Tailwind CSS", "RRule"],
+            techStack: [
+              "Next.js",
+              "TypeScript",
+              "Prisma",
+              "SQLite",
+              "ShadCN UI",
+              "Tailwind CSS",
+              "RRule",
+            ],
             features: [
               "Staff and carer management with profile images",
               "Booking scheduler with one-time and recurring shifts",
@@ -406,7 +446,7 @@
         description: "DeepTestDroid: A Platform for Automated Application Testing Using Deep Learning",
         date: "2024",
         featured: true,
-        link:"https://ieeexplore.ieee.org/document/10271935"
+        link: "https://ieeexplore.ieee.org/document/10271935",
       },
       {
         title: "Best Scrum Leader",
