--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@emailjs/nodejs": "^5.0.2",
+    "@microsoft/clarity": "^1.0.2",
     "date-fns": "^3.0.0",
     "json5": "^2.2.3",
     "next": "^14.2.0",
